created several cms forms

--- a/modules/general/views/general/languages/nl/validation.ini
+++ b/modules/general/views/general/languages/nl/validation.ini
@@ -1,7 +1,10 @@
 validate.notempty.empty = "Dit veld mag niet leeg zijn."
-validate.stringlength.too_short = "Dit veld moet minimaal {{min}} tekens bevatten."
-validate.stringlength.too_long = "Dit veld mag maximaal {{max}} tekens bevatten."
+validate.stringlength.too_short = "Te kort, minimaal {{min}} teken(s)."
+validate.stringlength.too_long = "Te lang, maximaal {{max}} tekens bevatten."
 validate.inarray.not_in_array = "Ongeldige keuze."
 validate.date.invalid_date = "Ongeldige datum ({{format}})."
 validate.imagetype.invalid_type = "Ongeldig afbeelding formaat. Toegestaan: {{extensions}}"
 validate.emailaddress.invalid_emailaddress = "Ongeldig emailadres."
+validate.numericvalue.too_low = "Te lage waarde, minimaal {{min}}"
+validate.numericvalue.too_high = "Te hoge waarde, maximaal {{max}}"
+validate.numericvalue.not_whole = "Vul een geheel getal in"
